<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomek.wpam_app.Offers.CreateOfferActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/level"
        android:textColorHint="@color/colorAccent"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/address"
        android:textColorHint="@color/colorAccent"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/price"
        android:textColorHint="@color/colorAccent"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/date"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price" />

</android.support.constraint.ConstraintLayout>
